Refactor tracing and restoration cleanup